--- a/product/数据库/云数据库MySQL/动态与公告/公告/参数模版及新购实例优化.md
+++ b/product/数据库/云数据库MySQL/动态与公告/公告/参数模版及新购实例优化.md
@@ -1,9 +1,26 @@
 
 云数据库 MySQL 将于2021年10月18日起，进行参数相关能力以及发货流程的优化。本次优化涉及参数模版创建、参数对比、参数模版应用、参数修改等能力、可修改参数以及新购实例优化的更新。
 
->?该参数相关能力以及发货流程的优化，将于2021年9月24日先开启内测，如需提前体验可 [提交工单](https://console.cloud.tencent.com/workorder/category) 进行申请。
+>?该参数相关能力以及发货流程的优化，将于2021年09月27日先开启内测，如需提前体验可 [提交工单](https://console.cloud.tencent.com/workorder/category) 进行申请。
 
-## 参数模版优化
+## 新购实例优化
+相较于原有新购实例流程，取消了初始化过程，在新购页面支持选择字符集、表名大小写敏感、填写数据库访问端口、root 密码。
+
+详细请参见 [创建 MySQL 实例](https://cloud.tencent.com/document/product/236/61667)。
+
+## 参数相关优化
+### 参数应用
+部分参数支持公式进行定义，该类参数可以跟随规格的变化而变化，使得数据库始终运行在最佳配置下。
+表达式语法的相关支持详见下表。
+
+| 支持类别 | 说明 | 样例 | 
+| ------ | ------------------------------------------------------------ | --------------------- | 
+| 变量   | <li>DBinitMemory：实例规格的内存大小，整数型。例如，实例规格的内存大小为4000MB，则 DBinitMemory 的值为4000。 <li>DBInitCpu：实例规格的 CPU 核数，整数型。   说明云数据库 MySQL 的 innodb_buffer_pool_size 参数设置必须保持在内存大小的50% - 90%之间，当设置的数值大于90%时，会自动设置为90%；当设置的数值小于于50%时，会自动设置为50%。 | {DBinitMemory*786432} |    
+| 运算符 | 公式语法：使用 {} 包裹。 <li>除法运算符（/）：用被除数除以除数，返回整数型商。如果计算结果为小数，会截断取整数部分。不支持小数，例如系统支持 {MIN(DBInitMemory/4+500,1000000)}，不支持 {MIN(DBInitMemory\*0.25+500,1000000)}。<li> 乘法运算符（*）：两个乘数相乘，返回整数型积。如果计算结果为小数，会截断取整数部分。不支持小数运算。 |  -                     |    
+| 函数   | <li>函数 MAX()，返回整数型或者参数公式列表中最大的值。 <li>函数 MIN()，返回整数型或者参数公式列表中最小的值。</li> | {MAX(DBInitCpu/2,4)}  |     
+
+参数详细设置请参见 [设置实例参数](https://cloud.tencent.com/document/product/236/61668)。
+
 ### 参数模版创建
 创建参数模版时，由原有的一种模版变为两种模版（高性能参数模版/高稳定性参数模版），新增原始模版类型选项。
 <img src="https://main.qcloudimg.com/raw/397da8ea5e48b4c00140aaeab778396f.png"  style="zoom:50%;">
@@ -78,23 +95,6 @@
 ![](https://main.qcloudimg.com/raw/340fd4c17f7b82bfde0bcd06dd62b275.png)
 参数模版页面单击**对比**，在弹窗中选择想要对比的模版即可，仅支持对比相同版本的数据库模版。结果参考如下：
 <img src="https://main.qcloudimg.com/raw/1018f714bfa5d628d8477b50c74333b8.png"  style="zoom:40%;">
-
-### 参数应用
-部分参数支持公式进行定义，该类参数可以跟随规格的变化而变化，使得数据库始终运行在最佳配置下。
-表达式语法的相关支持详见下表。
-
-| 支持类别 | 说明 | 样例 | 
-| ------ | ------------------------------------------------------------ | --------------------- | 
-| 变量   | <li>DBinitMemory：实例规格的内存大小，整数型。例如，实例规格的内存大小为4000MB，则 DBinitMemory 的值为4000。 <li>DBInitCpu：实例规格的 CPU 核数，整数型。   说明云数据库 MySQL 的 innodb_buffer_pool_size 参数设置必须保持在内存大小的50% - 90%之间，当设置的数值大于90%时，会自动设置为90%；当设置的数值小于于50%时，会自动设置为50%。 | {DBinitMemory*786432} |    
-| 运算符 | 公式语法：使用 {} 包裹。 <li>除法运算符（/）：用被除数除以除数，返回整数型商。如果计算结果为小数，会截断取整数部分。不支持小数，例如系统支持 {MIN(DBInitMemory/4+500,1000000)}，不支持 {MIN(DBInitMemory\*0.25+500,1000000)}。<li> 乘法运算符（*）：两个乘数相乘，返回整数型积。如果计算结果为小数，会截断取整数部分。不支持小数运算。 |  -                     |    
-| 函数   | <li>函数 MAX()，返回整数型或者参数公式列表中最大的值。 <li>函数 MIN()，返回整数型或者参数公式列表中最小的值。</li> | {MAX(DBInitCpu/2,4)}  |     
-
-参数详细设置请参见 [设置实例参数](https://cloud.tencent.com/document/product/236/61668)。
-
-## 新购实例优化
-相较于原有新购实例流程，取消了初始化过程，在新购页面支持选择字符集、表名大小写敏感、填写数据库访问端口、root 密码。
-
-详细请参见 [创建 MySQL 实例](https://cloud.tencent.com/document/product/236/61667)。
 
 ## 联系我们
 若您有任何疑问，可随时 [联系我们](https://cloud.tencent.com/act/event/connect-service)。感谢您长期以来对腾讯云的支持，腾讯云也将持续为您提供更高性价比的产品。
