--- a/product/移动与通信/即时通信/11错误码.md
+++ b/product/移动与通信/即时通信/11错误码.md
@@ -179,6 +179,7 @@
 | 60018  | 请求过于频繁，请稍后重试。                                   |
 | 60019  | 请求过于频繁，请稍后重试。                                   |
 | 60020  | 您的专业版套餐包已到期并停用，请登录 [即时通信 IM 购买页面](https://buy.cloud.tencent.com/avc) 重新购买套餐包。购买后，将在5分钟后生效。 |
+|60021  |RestAPI 调用来源 IP 非法。|
 | 80001  | 文本安全打击，文本中可能包含敏感词汇。                       |
 | 80002  | 发消息包体过长，目前支持最大8k消息包体长度，请减少包体大小重试。 |
 
