--- a/product/计算与网络/无服务器云函数/购买指南/计费方式/计费方式介绍.md
+++ b/product/计算与网络/无服务器云函数/购买指南/计费方式/计费方式介绍.md
@@ -1,7 +1,7 @@
 云函数付费方式主要分为按量付费（后付费）和资源包（预付费）两种方式。
 
 - 方式一：按量付费（后付费）
-按量付费（后付费）指用户按照实际使用付费，未消耗则不计费，采用后付费小时结，以**元**为单位进行结算。详情请参见 [按量付费（后付费）](https://cloud.tencent.com/document/product/583/12284)
+按量付费（后付费）指用户按照实际使用付费，未消耗则不计费，采用后付费小时结，以**元**为单位进行结算。详情请参见 [按量付费（后付费）](https://cloud.tencent.com/document/product/583/12284)。
 
 - 方式二：资源包（预付费）
 资源包（预付费）指用户可以按照实际需求，预先购买资源包进行资源抵扣，相比按量付费模式，单位时间费用更低。详情请参见 [资源包（预付费）](https://cloud.tencent.com/document/product/583/61679)。
