--- a/product/移动与通信/短信/常见问题/费用相关问题.md
+++ b/product/移动与通信/短信/常见问题/费用相关问题.md
@@ -21,7 +21,7 @@
 您可以检查您的腾讯云账户余额，如果余额为负数表示已欠费停服，请及时缴清欠款。当余额大于0时，系统会自动为您恢复服务。
 
 ### 套餐包支持余额退款吗？[](id:Q5)
-在不违反腾讯云短信 [服务协议](https://cloud.tencent.com/document/product/382/15627) 的情况下，国内短信套餐包自购买之日起3个月内可登录短信控制台的【[套餐包管理](https://console.cloud.tencent.com/smsv2/manage-package)】页面申请退费。未使用过的国内短信套餐包按购买时的金额退全款，使用过的扣除掉已使用部分退还剩余款项。购买超过3个月的国内短信套餐包，无论是否使用，一律不支持退订/退款。详细退费说明请参见 [国内短信套餐包退费说明](https://cloud.tencent.com/document/product/382/35827)。
+在不违反腾讯云短信 [服务协议](https://cloud.tencent.com/document/product/382/15627) 的情况下，国内短信套餐包自购买之日起3个月内可登录短信控制台的**[套餐包管理](https://console.cloud.tencent.com/smsv2/manage-package)**页面申请退费。未使用过的国内短信套餐包按购买时的金额退全款，使用过的扣除掉已使用部分退还剩余款项。购买超过3个月的国内短信套餐包，无论是否使用，一律不支持退订/退款。详细退费说明请参见 [国内短信套餐包退费说明](https://cloud.tencent.com/document/product/382/35827)。
 
 ### 国际/港澳台短信服务的欠费会怎么样？[](id:Q6)
 国际/港澳台短信实行 [日结后付费](https://cloud.tencent.com/document/product/382/18052) 的计费模式，次日上午8:00扣除当日的短信费用。如果您的账户余额不足导致扣费失败会收到欠费通知短信，若12小时内账户还未充值则暂停服务处理。
