--- a/product/计算与网络/负载均衡/购买指导/购买方式.md
+++ b/product/计算与网络/负载均衡/购买指导/购买方式.md
@@ -189,7 +189,7 @@ CLB 的 IP 版本可以选择 IPv4、IPv6 或者 IPv6 NAT64。使用限制详情
 <td><span style="font-weight:bold">运营商类型</span></td>
 <td>
 运营商类型分为：BGP、中国移动、中国电信和中国联通。<br/>
-目前仅广州、上海、南京、济南、杭州、福州、北京、石家庄、武汉、长沙、成都、重庆地域支持静态单线 IP 线路类型，请提交 <a href="https://cloud.tencent.com/apply/p/6nzb3jwbsk">内测申请</a>，其他地域支持情况请以控制台页面为准，如需体验，请联系商务经理申请。申请通过后，即可在购买页选择中国移动、中国联通或中国电信的运营商类型。
+目前仅广州、上海、南京、济南、杭州、福州、北京、石家庄、武汉、长沙、成都、重庆地域支持静态单线 IP 线路类型，该功能处于内测阶段，如需体验，请提交 <a href="https://cloud.tencent.com/apply/p/6nzb3jwbsk">内测申请</a>，其他地域支持情况请以控制台页面为准，如需体验，请联系商务经理申请。申请通过后，即可在购买页选择中国移动、中国联通或中国电信的运营商类型。
 </td>
 </tr>
 <tr>
