--- a/product/互联网中间件/腾讯云微服务引擎/购买指南/注册配置中心/产品版本.md
+++ b/product/互联网中间件/腾讯云微服务引擎/购买指南/注册配置中心/产品版本.md
@@ -1,6 +1,6 @@
-微服务引擎 TSE Zookeeper 和 Nacos 实例按照版本分为体验版和标准版，两个版本的对比如下：
+微服务引擎 TSE Zookeeper 和 Nacos 实例按照版本分为开发版和标准版，两个版本的对比如下：
 
-| 功能点                             | 体验版                                                       | 标准版                                                       |
+| 功能点                             | 开发版                                                       | 标准版                                                       |
 | --------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | 适用场景                            | 适用于开发自测、产品体验场景。                                   | 适用于生产、测试环境。                                            |
 | 实例类型                         | 专享实例 | 专享实例 |
