--- a/product/计算与网络/专线接入/操作指南18-08-27/创建物理线路/专线接入点.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/创建物理线路/专线接入点.md
@@ -124,8 +124,8 @@
 <td >深圳市坪山新区深宇科技园</td>
 </tr>
 <tr >
-<td rowspan=14 >华北</td>
-<td rowspan=12>北京</td>
+<td rowspan=15 >华北</td>
+<td rowspan=13>北京</td>
 <td >北京 - A - 科创</td>
 <td >北京市经济技术开发区科创九街十五号</td>
 </tr>
@@ -166,6 +166,10 @@
 <tr >
 <td >北京 - L - 顺义</td>
 <td >北京市顺义区后沙峪镇中国航信高科技产业园</td>
+</tr>
+<tr >
+<td >北京 - M - 怀来东园</td>
+<td >张家口市怀来县东花园镇</td>
 </tr>
 <tr >
 <td >北京 - 金融云 - A - 永丰</td>
