--- a/product/监控与管理/前端性能监控/购买指南/计费概述.md
+++ b/product/监控与管理/前端性能监控/购买指南/计费概述.md
@@ -1,7 +1,7 @@
-您可以出参考下列计算规则，估算使用前端性能监控需要的成本。RUM 提供每应用每天可拥有 50W的免费上报额度，如超过免费额度，系统默认帮您按下列收费规则收费。
+您可以参考下列计算规则，估算使用前端性能监控需要的成本。RUM 提供每应用每天 50万的免费上报额度，如超过免费额度，系统默认帮您按下列收费规则收费。
 
 ## 收费规则
-目前仅支持结按量付费（后付费），即先使用后付费，计费周期为按小时结算。包年包月套餐将会在后期上线。
+目前仅支持按量付费（后付费），即先使用后付费，计费周期为按小时结算。包年包月套餐将会在后期上线。
 前端性能监控的收费项为上报数据量，在前端性能监控存储一条数据算一次上报（包括 PV、API 统计次数、静态资源统计次数、错误日志次数、自定义上报次数）。
 - 每应用每天50万免费上报数据量额度。
 - 对超过50万上报次数的部分进行计费。
