--- a/product/移动与通信/即时通信/产品动态.md
+++ b/product/移动与通信/即时通信/产品动态.md
@@ -3,6 +3,20 @@
 <tr><th width="20%">动态名称</th>  <th width="44%">动态描述</th><th width="15%">发布时间</th><th width="21%">相关文档</th>
 </tr> 
 <tr>
+    <td> SDK 6.2.2363 增强版本发布</td>
+    <td><ul style="margin:0">
+	<li> 新增社群话题功能</li>
+	<li> 新增消息编辑接口</li>
+	<li> 支持 C2C 消息已读回执</li>
+	<li> 优化国际站的联网质量</li> 
+	<li> 修复消息已读后，卸载重装再拉取该消息，已读状态为未读的问题</li>
+	<li> 更多更新内容请参考 <a href="https://cloud.tencent.com/document/product/269/1606">更新日志</a></li>
+    </ul></td>
+    <td> 2022-04-29 </td>
+    <td> <a href="https://cloud.tencent.com/document/product/269/36887">终端 SDK 下载</a></td>
+</tr>	
+	
+<tr>
     <td> SDK 2.19.0 版本发布（小程序和 Web 端）</td>
     <td><ul style="margin:0">
 <li>支持 <a href="https://cloud.tencent.com/document/product/269/1502#.E7.BE.A4.E7.BB.84.E7.B1.BB.E5.9E.8B.E4.BB.8B.E7.BB.8D">社群（Community）</a>下创建话题（Topic），支持互动性更强的场景</li>
