--- a/product/监控与管理/应用性能观测/购买指南/计费概述.md
+++ b/product/监控与管理/应用性能观测/购买指南/计费概述.md
@@ -5,7 +5,7 @@
 应用性能观测采用按量付费后付费模式，即先按需申请资源使用，在结算时会按您的实际资源使用量收取费用。
 
 ## 计费周期
-按日结算方式。在当日凌晨后，将会对您前一日实际用量所产生的费用进行结算，输出账单并在您的账户余额中进行扣费。
+按小时结算。前1小时产生的总消耗，会在2-4小时内计算并扣费。
 
 ## 计费价格
 ### 计费公式
