--- a/product/监控与管理/应用性能观测/产品动态.md
+++ b/product/监控与管理/应用性能观测/产品动态.md
@@ -5,7 +5,7 @@
 <th width="20%">动态名称</th>
 <th width="50%">动态描述</th>
  <th width="15%">发布时间</th>  
-<th width="15%">相关文档</th>
+<th width="15%">相关链接</th>
 </tr>
 </thead>
 <tbody><tr>
@@ -23,7 +23,7 @@
 <th width="20%">动态名称</th>
 <th width="50%">动态描述</th>
  <th width="15%">发布时间</th>  
-<th width="15%">相关文档</th>
+<th width="15%">相关链接</th>
 </tr>
 </thead>
 <tbody><tr>
