--- a/product/监控与管理/前端性能监控/产品动态.md
+++ b/product/监控与管理/前端性能监控/产品动态.md
@@ -7,7 +7,7 @@
 <th width="20%">动态名称</th>
 <th width="50%">动态描述</th>
  <th width="15%">发布时间</th>  
-<th width="15%">控制台链接</th>
+<th width="15%">相关链接</th>
 </tr>
 </thead>
 <tbody><tr>
