--- a/product/管理与支持/计费相关(new)/购买流程/充值/在线充值.md
+++ b/product/管理与支持/计费相关(new)/购买流程/充值/在线充值.md
@@ -1,12 +1,12 @@
 ## 操作场景
 您可以使用微信支付、QQ 钱包、网银支付进行线上充值。
 
-## 注意事项
+>!
 - 由于涉及到敏感操作，只有创建者或管理财务角色协作者才可以进入到充值页面。
 - 充值的金额只有消费后才可开具发票。
 - 在线充值系统不会自动抵扣垫付未回款，如需自动抵扣请使用对公汇款充值。
 - 在线支付如需使用国际卡支付，请先前往微信绑定国际卡后使用微信支付。
-- 账号针对短时间内频繁充值或多个账号向同一个UIN 进行在线充值时会出现系统限频拦截，建议不要频繁提交充值。若您有更改资金需求建议走 **[对公汇款](https://cloud.tencent.com/document/product/555/9901)** 流程。
+- 账号针对短时间内频繁充值或多个账号向同一个UIN 进行在线充值时会出现系统限频拦截，建议不要频繁提交充值。若您有更多资金需求建议走 **[对公汇款](https://cloud.tencent.com/document/product/555/9901)** 流程。
 
 
 ## 充值说明
