--- a/product/管理与支持/账号相关/账号信息/绑定登录方式.md
+++ b/product/管理与支持/账号相关/账号信息/绑定登录方式.md
@@ -94,11 +94,13 @@
 ### 使用企业微信关联已有账号
 
 如果您之前使用非企业微信注册方式注册过腾讯云账号，需要将企业微信登录的方式关联到已有腾讯云账号，步骤如下：
-1.登录腾讯云控制台，进入 [账号信息](https://console.cloud.tencent.com/developer) 页面。
-2.在“登录方式”栏中，找到企业微信，单击**绑定**。
+1. 登录腾讯云控制台，进入 [账号信息](https://console.cloud.tencent.com/developer) 页面。
+2. 在“登录方式”栏中，找到企业微信，单击**绑定**。
 ![](https://main.qcloudimg.com/raw/98930da353e23c7d2dcab3ba343eb7bb.png)
 3. 在弹出的窗口中，根据页面提示，完成身份验证。 
->? 如果当前身份验证方式不可用，可以单击**使用备选校验方式**，通过备选校验方式验证身份。
+>? 
+>- 您需要为企业微信的管理员，才可以使用该关联方式。
+>- 如果当前身份验证方式不可用，可以单击**使用备选校验方式**，通过备选校验方式验证身份。
 >
 4. 打开企业微信扫一扫，扫描弹窗的二维码，完成授权后，即可完成账号绑定。
 
