--- a/product/管理与支持/计费相关(new)/购买流程/充值/对公汇款/银企直联专属账号汇款.md
+++ b/product/管理与支持/计费相关(new)/购买流程/充值/对公汇款/银企直联专属账号汇款.md
@@ -66,7 +66,7 @@
 
 ## 常见问题
 
-如有疑问，请参考 [充值常见问题](https://cloud.tencent.com/document/product/555/7444)。
+如有疑问，请参考 [银企直联专属账号汇款相关](https://cloud.tencent.com/document/product/555/73175)。
 
 
 
