--- a/product/存储与CDN/对象存储 4.0/购买指南/计费方式/资源包（预付费）/资源包退费.md
+++ b/product/存储与CDN/对象存储 4.0/购买指南/计费方式/资源包（预付费）/资源包退费.md
@@ -6,13 +6,30 @@
 
 1. 购买资源包时所使用的代金券不支持退还，非代金券费用按支付方式（现金/赠送金）及支付比例退还到支付方腾讯云账户。退费详情请前往 [订单管理页](https://console.cloud.tencent.com/expense/deal) 查看。
 2. 支持自助退费的 COS 资源包需同时满足以下三个条件：
- - 订单类型为“新购”或“续费”。
- - 该资源包的额度未使用：指资源包没有产生用量。
- - 资源包仍在有效期内。
+ - 订单类型：“新购”或“续费”。
+ - 用量：资源包没有产生用量、未使用。
+ - 有效期：新购资源包须在有效期内，续费资源包须未生效。
 
 >!
 >- 如需退还参与活动购买的资源包，且退款规则与活动规则有冲突，则以活动规则为准。
 >- 如出现疑似异常或恶意退费，腾讯云有权拒绝您的退费申请。
+
+#### 常见问题
+1. 如何查看资源包的订单类型？
+您可在**费用 > 费用中心 > 订单管理 > 预付费订单**中查看订单类型，在产品类别中选择“COS 对象存储”即可。点击[查看](https://console.cloud.tencent.com/expense/deal)
+![]()
+
+2. 如何查看资源包的用量及有效期？
+您可在**COS控制台 > 资源包管理 > 自购资源包**中查看资源包的用量及有效期。点击[查看](https://console.cloud.tencent.com/cos/package/buy)
+![]()
+
+
+### 退费入口
+
+- 对于新购资源包
+在符合自助退费条件的情况下，可在 **COS 控制台 > 资源包管理**中退费，操作指引请参见 [对新购资源包进行退费](#new)。
+- 对于续费资源包
+在符合自助退费条件的情况下，可在**费用中心 > 续费管理**中退费，操作指引请参见 [对已续费的资源包进行退费](#renewal)。
 
 
 ### 退费金额计算方法
@@ -37,15 +54,7 @@
 
 ## 自助退费操作步骤
 
-- 对于新购资源包
-在符合自助退费条件的情况下，可在 **COS 控制台 > 资源包管理**中退费，操作指引请参见 [对新购资源包进行退费](#new)。
-- 对于续费资源包
-在符合自助退费条件的情况下，可在**费用中心 > 续费管理**中退费，操作指引请参见 [对已续费的资源包进行退费](#renewal)。
-
-
-
 ### 对新购资源包进行退费[](id:new)
-
 
 1. 登录 [对象存储控制台](https://console.cloud.tencent.com/cos5)。
 2. 单击左侧菜单栏中的**资源包管理**，进入资源包管理**自购资源包**页面。
@@ -57,19 +66,19 @@
  - 提交自助退款申请后，系统将经过3 - 5分钟完成退款并销毁云资源。
  - 您可在 [订单管理](https://console.cloud.tencent.com/expense/deal) 查看退款订单。当订单状态更新为“已退款”后，可在费用中心页面查看款项。
 
-
-
-
 ### 对已续费的资源包进行退费[](id:renewal)
 
 1. 登录 [腾讯云控制台](https://console.cloud.tencent.com)。
-2. 在控制台页面的右上方单击**费用 > 费用中心 > 续费管理**，在**手动续费项**中找到想要退费的已续费资源包，选择资源包右侧的**更多 > 退订续费**。如下图所示：
-![](https://qcloudimg.tencent-cloud.cn/raw/16060cec9f84b2c669e27d41bad658ed.png)
-3. 找到您想要退费的资源包，单击资源包右侧的**更多 > 退订续费**。
+2. 在控制台页面的右上方单击**费用 > 费用中心 > 续费管理**，在产品类别中选择“COS 对象存储”。在续费类型中选择“手动续费项”或者“自动续费项”进行筛选，找到您想要退费的资源包。在续费列表的操作列的更多中找到**退订续费**，如下图所示：
+- 若您的资源包符合退款要求，即可自助退费。
+- 若不符合要求，则无法退费。
+
+![](https://qcloudimg.tencent-cloud.cn/raw/4636d470a4e99f12654f6d52db8f46c6.png)
+
 >!用量统计数据非实时数据（有24小时延迟），如果您当天购买资源包，需要在次日才能看到当天的用量。
 >
-4. 在退款信息页面，请仔细核对退款信息（包括资源包信息、退款形式、退款金额等）。
-5. 确认信息无误后，单击**确认退款**提交申请。
+3. 在退款信息页面，请仔细核对退款信息（包括资源包信息、退款形式、退款金额等）。
+4. 确认信息无误后，单击**确认退款**提交申请。
  - 提交自助退款申请后，系统将经过3 - 5分钟完成退款并销毁云资源。
  - 您可在 [订单管理](https://console.cloud.tencent.com/expense/deal) 查看退款订单。当订单状态更新为“已退款”后，可在费用中心页面查看款项。
 
