--- a/product/数据库/数据库智能管家/操作指南/MySQLTDSQL-C诊断优化/空间分析.md
+++ b/product/数据库/数据库智能管家/操作指南/MySQLTDSQL-C诊断优化/空间分析.md
@@ -25,15 +25,18 @@
 
 - 单击右上方的下载标识，可以将 TOP 表数据以 CSV 格式下载到本地。
   ![](https://qcloudimg.tencent-cloud.cn/raw/a601bf497e35dc241c4c80e50038f822.png)
+	
 ## TOP 库空间
 - TOP 库空间为您展示当前占用空间较大库的详情，包括物理文件大小、行数、总使用空间、数据空间、索引空间、碎片空间、碎片率等，各列数据均支持倒叙排列。您可以通过此信息了解磁盘空间的使用详情，及时进行优化。 
   ![](https://main.qcloudimg.com/raw/ac49241693a5c7f83d5cbf9ad22f249d.png)
 - TOP 库以数据库的粒度呈现，单击 TOP 库中的数据行，也可以查看该库的趋势图，包含物理文件大小、空间占用（数据空间、索引空间、总使用空间）、以及碎片率的趋势图。
     ![](https://main.qcloudimg.com/raw/3e4a7776b1d53c419de82a8ce92d73f7.png)
-- 单击右上方的下载标识，可以将 TOP 表数据以 CSV 格式下载到本地。
+- 单击右上方的下载标识，可以将 TOP 库数据以 CSV 格式下载到本地。
+
 ## 无主键表
 - 无主键表为您展示当前实例中存在的缺少建立主键的表信息，缺少主键的表具有一定的潜在隐患，会对实例读写性能、同步效率等产生影响。建议用户及时处理这些无主键的表，增加符合业务场景的主键。
 ![](https://main.qcloudimg.com/raw/d73238a762828f09cb17f56032e4d120.png)
 - 无主键表列表支持定期扫描（频率为每天扫描1次）和手动刷新两种方式。单击列表的无主键表可查看表的字段和索引信息。
 ![](https://main.qcloudimg.com/raw/d13c0ce8b223052d7c27e52ee353ab2e.png)
-- 单击右上方的下载标识，可以将 TOP 表数据以 CSV 格式下载到本地。
+- 单击右上方的下载标识，可以将无主键表数据以 CSV 格式下载到本地。
+
