--- a/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
+++ b/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
@@ -1,7 +1,7 @@
 [](id:que1) 
 
 ### 邮件推送支持哪些身份验证机制？
-邮件推送支持所有行业标准的身份验证机制，包括域名密钥识别邮件 (DKIM)、发件人策略框架 (SPF)、基于域的邮件身份验证、报告和一致性 (DMARC)。
+邮件推送支持所有行业标准的身份验证机制，包括域名密钥识别邮件 (DKIM)、发件人策略框架 (SPF)、基于域的邮件身份验证、报告和一致性 (DMARC)、邮件交换记录（MX record）。
 
 [](id:que2) 
 ### 如何配置发信域名？
