--- a/product/存储与CDN/对象存储 4.0/开发者指南/数据处理/盲水印概述.md
+++ b/product/存储与CDN/对象存储 4.0/开发者指南/数据处理/盲水印概述.md
@@ -11,7 +11,8 @@
 | 文字盲水印（type3） | 可直接将文字信息添加至图片中               | 终端信息添加            |
 
 >?
->- 盲水印是付费服务，使用时需在相应存储桶配置页中通过开启按钮开通服务。每个账户拥有三千次免费额度，超出后进行计费，费用由数据万象收取，详细的计费说明请参见数据万象 [计费与定价](https://cloud.tencent.com/document/product/460/6970)。
+>- 盲水印是付费服务，使用时需在相应存储桶配置页中通过开启按钮开通服务。
+>- 数据万象在每个账户在首次产生该服务用量后，将发放一个用量为6000次，有效期为2个月的免费额度资源包，超出用量或资源包到期后将正常计费。费用由数据万象收取，详细的计费说明请参见数据万象 [计费与定价](https://cloud.tencent.com/document/product/460/6970)。
 >- 盲水印功能适用于所有公有云地域。
 
 ## 适用场景
