--- a/product/视频服务/直播/购买指南/预付费资源包.md
+++ b/product/视频服务/直播/购买指南/预付费资源包.md
@@ -75,6 +75,7 @@
 >- 2021年04月20日0点起，直播流量资源包新增支持按比例抵扣**国际/港澳台快直播日结流量**。
 >- 2021年08月21日0点起，直播流量资源包新增支持按比例抵扣**中国内地（大陆）直播推流**和**国际/港澳台直播推流**产生的日结流量费用。
 >- 2022年01月04日0点起，针对直播资源包定价进行调整，直播流量资源包再次升级，**新增根据大区分区按比例抵扣**快直播、标准直播和直播推流的国际/港澳台日结流量。详细调整公告请参见 [价格调整公告](https://cloud.tencent.com/document/product/267/63835)。
+>- 直播流量资源包推出快直播特惠活动，可以用**更优惠的抵扣比例抵扣快直播日结流量。**活动详情请参见 [云直播流量包（快直播特惠）](https://cloud.tencent.com/document/product/267/73490)。
 
 ### 抵扣比例
 
