--- a/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
+++ b/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
@@ -1,4 +1,64 @@
+[](id:que1) 
+
+### 邮件推送支持哪些身份验证机制？
+邮件推送支持所有行业标准的身份验证机制，包括域名密钥识别邮件 (DKIM)、发件人策略框架 (SPF)、基于域的邮件身份验证、报告和一致性 (DMARC)、邮件交换记录（MX record）。
+
+[](id:que2) 
+### 如何配置发信域名？
+<dx-tabs>
+::: 步骤一：DNS 解析界面配置
+1. 通过 [发信域名](https://console.cloud.tencent.com/ses/domain) 设置页面，单击**新建**。
+![](https://qcloudimg.tencent-cloud.cn/raw/0b916fe36e001d2a2d737d522c9944d2.png)
+2. 填写域名后，单击**提交**即可。
+![](https://qcloudimg.tencent-cloud.cn/raw/66360726a9b51e701c70758fc64fd8e3.png)
+
+<dx-alert infotype="explain" title="">
+- sampledomain.com 为示例，此处应替换为您的发信地址。
+- 如果您填入的域名是 sampledomain.com 形式，这属于主域名。
+- 如果您填入的域名是 abc.sampledomail.com 形式，这属于非主域名。
+- 是否使用主域名发信，在下面的配置中有存在差异，详见对应的说明。
+</dx-alert>
+3. 返回至 [发信域名](https://console.cloud.tencent.com/ses/domain) 设置页面，单击**验证**。
+![](https://qcloudimg.tencent-cloud.cn/raw/55afb951be6f94d7573a7f128811a5bd.png)
+4. 记录弹出界面中“记录值”的内容。[](id:step4)
+>?下图为示例，请以您界面中看到的内容为准。
+
+![](https://qcloudimg.tencent-cloud.cn/raw/a6d2143e067f2ce51e9897eb8382214c.png)
+<dx-alert infotype="explain" title="">
+每个账号的记录值都不同，请以您界面中看到的内容为准。
+</dx-alert>
+5. 如果您的域名托管在腾讯云，请进入  [DNS 解析 DNSPod 控制台](https://console.cloud.tencent.com/cns) 配置验证信息，单击对应的发信域名地址，可进入配置详情页。
+![](https://qcloudimg.tencent-cloud.cn/raw/6f0f1b7d192a39d549081ebd6d1f3c6e.png)
+<dx-alert infotype="explain" title="">
+如果您的域名托管在其它域名服务商，请自行按照清单详情来配置。
+</dx-alert>
 6. 以主域名 sampledomain.com 为例添加记录，填入上述 [步骤4](#step4) 对应的“记录值”。
+  - DKIM 验证，填入2条记录：
+  主机记录填入：`mail._domainkey`
+	记录类型选择：TXT
+	记录值中填入您的“记录值”。
+![](https://qcloudimg.tencent-cloud.cn/raw/62d7c629ad48caef5716da173a6842a8.png)
+<dx-alert infotype="explain" title="">
+如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：mail._domainkey.abc。
+</dx-alert>
+  - 主机记录填入：`qcloud._domainkey`
+	记录类型选择：TXT
+	记录值中填入您的“记录值”。
+![](https://qcloudimg.tencent-cloud.cn/raw/3571c6795ad5a5ffff44659f1cf2fca8.png)
+<dx-alert infotype="explain" title="">
+如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：qcloud._domainkey.abc。
+</dx-alert>
+  - SPF 验证：
+  主机记录中填入：`@`
+	记录类型选择：TXT
+	记录值中填入您的“记录值”。
+![](https://qcloudimg.tencent-cloud.cn/raw/f5a86eb5666a4359dc792e85e6cd3297.png)
+<dx-alert infotype="explain" title="">
+如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：abc。
+</dx-alert>
+  - DMARC 验证：
+  主机记录中填入：`_dmarc`
+	记录类型选择：TX6. 以主域名 sampledomain.com 为例添加记录，填入上述 [步骤4](#step4) 对应的“记录值”。
   - MX 验证
   主机记录中填入：`@`
   记录类型选择：MX
@@ -23,10 +83,10 @@
 <dx-alert infotype="explain" title="">
 如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：mail._domainkey.abc。
 </dx-alert>
-  主机记录填入：`mail._domainkey`<br>
-  记录类型选择：TXT<br>
+  主机记录填入：`mail._domainkey`
+  记录类型选择：TXT
   记录值中填入您的“记录值”。
-<img src="https://qcloudimg.tencent-cloud.cn/raw/bb5349667453cf0cff7de92ba2b6dc94.png" />
+	![](https://qcloudimg.tencent-cloud.cn/raw/bb5349667453cf0cff7de92ba2b6dc94.png)
 <dx-alert infotype="explain" title="">
 如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：qcloud._domainkey.abc。
 </dx-alert>
@@ -46,3 +106,34 @@
 - mail@sampledomain.com 为示例，此处应替换为您的发信地址。
 - 如果您的发信域名是 abc.sampledomain.com，示例中的发信地址为 mail@abc.sampledomain.com。
 </dx-alert>
+T
+	记录值中填入：`v=DMARC1; p=none; ruf=mailto:sampledomain.com; adkim=r; aspf=r`
+![](https://qcloudimg.tencent-cloud.cn/raw/4cf8a07f30a1fc7e095fc88ecac9a744.png)
+<dx-alert infotype="explain" title="">
+sampledomain.com 为示例，此处应替换为您的发信地址。
+如果您的发信地址是 abc.sampledomain.com，请替换为 abc.sampledomain.com。
+</dx-alert>
+  - MX 验证
+  主机记录中填入：`@`
+	记录类型选择：TMXXT
+	记录值中填入：`mxbiz1.qq.com`
+![](https://qcloudimg.tencent-cloud.cn/raw/250a72988dfdcfb70f590161a767d10f.png)
+<dx-alert infotype="explain" title="">
+如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：abc。
+</dx-alert>
+7. 再次回到 [发信域名](https://console.cloud.tencent.com/ses/domain) 配置详情页，单击**验证**进行验证。“当前值”显示的是您在上述配置域名验证信息中配置的内容，当“记录值”与“当前值”完全一致，验证状态为“已验证”，配置完成。
+
+:::
+::: 步骤二：验证结果
+![](https://qcloudimg.tencent-cloud.cn/raw/275fb56fe9faa0a0ab3bd3735f3bd8c5.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/695ff02f3096d64481103a13e757362c.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/c9bc369664b4290a4048f94791f47209.png)
+
+:::
+</dx-tabs>
+
+<dx-alert infotype="explain" title="">
+- 上面设定并校验后，仍然建发信域名有问题，请联系 [腾讯云技术人员](https://console.cloud.tencent.com/workorder/category) 解决。
+- 若注册了 Dnspod 解析，但是 dig 不到：可能域名实名认证未通过（注册局设置停止解析）。
+</dx-alert>
+
