--- a/product/存储与CDN/对象存储 4.0/控制台指南/数据工作流/配置任务.md
+++ b/product/存储与CDN/对象存储 4.0/控制台指南/数据工作流/配置任务.md
@@ -315,7 +315,7 @@ SDR to HDR 为数据万象提供的视频动态范围变换功能，您可以通
 
 >?
 > - 智能封面是付费服务，按照原视频时长进行计费，具体费用请参见 [媒体处理费用](https://cloud.tencent.com/document/product/436/58966)。
-> - 数据万象为每个账户提供每月500分钟的免费体验额度，超出后将正常计费。未使用额度不会累积至下一月。
+> - 数据万象在每个账户在首次产生该服务用量后，将发放一个用量为1000分钟，有效期为2个月的免费额度资源包，超出用量或资源包到期后将正常计费。
 > - 每个视频文件将智能分析输出3张最优的关键帧。
 > 
 
