--- a/product/视频服务/直播/购买指南/预付费资源包.md
+++ b/product/视频服务/直播/购买指南/预付费资源包.md
@@ -205,11 +205,11 @@
 </tr>
 </tbody></table>
 
+<dx-alert infotype="explain" title="说明：">
+- 支持按照**快直播中国内地（大陆）** > **快直播国际/港澳台** > **标准直播中国内地（大陆）** > **标准直播国际/港澳台** > **直播推流中国内地（大陆）** > **直播推流国际/港澳台**的顺序抵扣对应的日结流量。其中，按照**亚太一区** > **亚太二区** > **亚太三区** > **北美** > **欧洲** > **中东** > **非洲** > **南美** 的顺序抵扣**国际/港澳台**对应的日结流量。**资源包资源用尽后，未抵扣部分会按照后付费价格产生对应的流量账单。**
+- **仅限升级后产生的对应日结流量使用资源包抵扣**。2021年03月01日0点前产生的标准直播国际/港澳台日结流量和快直播中国内地（大陆）日结流量，2021年04月20日0点前产生的快直播国际/港澳台日结流量不支持资源包抵扣，2021年08月21日0点前产生的直播推流中国内地（大陆）和直播推流国际/港澳台日结流量不支持资源包抵扣，2022年01月04日0点前产生的快直播国际/港澳台、标准直播国际/港澳台和直播推流国际/港澳台按原比例抵扣，不根据大区分区比例抵扣。
+</dx-alert>
 
-
->?
->- 支持按照**快直播中国内地（大陆）** > **快直播国际/港澳台** > **标准直播中国内地（大陆）** > **标准直播国际/港澳台** > **直播推流中国内地（大陆）** > **直播推流国际/港澳台**的顺序抵扣对应的日结流量。其中，按照**亚太一区** > **亚太二区** > **亚太三区** > **北美** > **欧洲** > **中东** > **非洲** > **南美** 的顺序抵扣**国际/港澳台**对应的日结流量。**资源包资源用尽后，未抵扣部分会按照后付费价格产生对应的流量账单。**
->- **仅限升级后产生的对应日结流量使用资源包抵扣**。2021年03月01日0点前产生的标准直播国际/港澳台日结流量和快直播中国内地（大陆）日结流量，2021年04月20日0点前产生的快直播国际/港澳台日结流量不支持资源包抵扣，2021年08月21日0点前产生的直播推流中国内地（大陆）和直播推流国际/港澳台日结流量不支持资源包抵扣，2022年01月04日0点前产生的快直播国际/港澳台、标准直播国际/港澳台和直播推流国际/港澳台按原比例抵扣，不根据大区分区比例抵扣。
 
 
 ### 计费价格
@@ -348,7 +348,11 @@ RTC 连麦互动直播服务为您提供音视频通用套餐包，可按照 **1
      </tr> 
 </table>
 
->?表格中套餐内单价按每千分钟单价向上取整精确到小数点后3位，实际计费按每分钟单价精确到小数点后8位。
+<dx-alert infotype="explain" title="说明：">
+表格中套餐内单价按每千分钟单价向上取整精确到小数点后3位，实际计费按每分钟单价精确到小数点后8位。
+</dx-alert>
+
+
 
 ### 通用套餐包说明
 
