--- a/product/计算与网络/轻量应用服务器/产品动态/镜像更新记录.md
+++ b/product/计算与网络/轻量应用服务器/产品动态/镜像更新记录.md
@@ -2,6 +2,15 @@
 镜像更新所涉及的下线镜像均不影响存量用户使用。
 </dx-alert>
 
+## 2022年05月
+<table>
+    <tbody><tr><th style="width: 40%;">镜像类型</th><th style="width:60%;">更新内容</th></tr>
+  <tr>
+		<td>应用镜像</td>
+		<td>下线 Discuz! Q 镜像。</td>
+		</tr>
+</tbody></table>
+
 
 ## 2022年04月
 <table>
