--- a/product/移动与通信/云开发低代码平台/模板/模板中心/面试管理/面试管理模板搭建.md
+++ b/product/移动与通信/云开发低代码平台/模板/模板中心/面试管理/面试管理模板搭建.md
@@ -1,1 +1,265 @@
 
+
+## 业务场景
+
+简历来源多，简历多，无法对简历进行分类，导致面试记录混乱，面试过多经常记错面试时间，错过面试。本应用模板旨在为中小型企业，没有专门的HR系统的企业提供轻量级面试管理应用，为面试官提供简历管理、分类、面试到期提醒等功能，提高面试效率。
+
+## 业务流程
+
+小程序：候选人在小程序端查看招聘岗位，并提交简历申请
+
+模型应用：HR 发布招聘 JD-->通过简历库对简历进行筛选-->推送给面试官-->面试官收到简历对简历进行操作（拒绝/预约面试）-->推送面试通知给候选人-->面试官面试并在系统添加面试记录。
+
+## 面试管理 B 端搭建
+
+## **按照业务场景拆解需要在微搭平台搭建的资源**
+
+
+
+| **资源**                 | **说明**                                                     |
+| ------------------------ | ------------------------------------------------------------ |
+| 应用                     | 招聘小程序面试管理（模型应用）                               |
+| 数据模型                 | 公司介绍：增/删/改/查招聘职位：增/删/改/查简历:增/删//查/推给负责人/约面试/拒绝/发offer面试记录（和简历为主子关系）：增/删/改/查 |
+| 模型页面（面试管理）     | 首页 ：统计相关招聘职位：增删改查页面简历： 增删改查页面面试记录：增删改查页面 |
+| 自定义页面（招聘小程序） | JD详情提交简历                                               |
+| 流程                     | 面试流程                                                     |
+| 用户角色                 | 外部用户：候选人角色：hr、业务负责人                         |
+
+
+
+## **在微搭平台按照步骤逐步配置以下资源**
+
+**创建数据模型**
+
+在微搭控制台创建【公司介绍】数据模型，并创建公司介绍所需的相关字段；按照相同步骤分别创建【招聘职位】【简历】【面试记录】
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/d70e4aa45e1734a02e230f756340a34b.png)        
+
+需要特别关注的是：【简历】数据表和【招聘职位】数据表是关联关系，需要在【简历】中创建关联关系字段“关联职位”，并关联至【招聘职位】表；【面试记录】数据表和【简历】数据表是关联关系，需要在【面试记录】中创建关联关系字段“关联用户”，并关联至【简历】表；
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/84ebb616a073d9411ab3e660fa7d44dd.png)        
+
+**创建流程**
+
+创建简历筛选流程，选择数据触发流，将简历状态更新“2”作为条件。
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/16ce4e0130d23379764ac9ae56dec936.png)        
+
+工作流审批节点为角色审批，审批通过时修改简历状态为“3”；驳回时修改简历状态为“6”
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/5f027e29f5f4505a615766bc92857b5d.png)        
+
+**创建页面**
+
+通过数据模型生成对应的增、删、改、查页面。
+
+在简历列表页面增加【推送】、【拒绝】按钮。拒绝按钮增加自定义方法修改简历状态为“6”，推送按钮增加自定义方法修改简历状态为“2”。
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/8f7c4fc702afcede5746bc76e0d0e444.png)        
+
+创建自定义页面作为首页，用于统计数据的展示。
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/a750cbf443794577b626486b70c22e71.png)        
+
+
+
+# **面试模板C端搭建**
+
+## **设定相关的变量字段**
+
+变量设置入口                 ![img](https://qcloudimg.tencent-cloud.cn/raw/bebeba2ab608b6060bdead14fa1a1506.png)        
+
+
+
+| 字段名称         | 字段标识                          | 变量类型 | 定义操作图                                                   |
+| ---------------- | --------------------------------- | -------- | ------------------------------------------------------------ |
+| 当前选中职位ID   | $app.dataset.state.jobId          | string   | ![img](https://qcloudimg.tencent-cloud.cn/raw/2aa6744cfd134c96dba65c5fd76f153c.png) |
+| 当前选中数据标识 | $app.dataset.state.dataId         | string   | ![img](https://qcloudimg.tencent-cloud.cn/raw/e2bb23b1fd65e2dfd80bf0e1065932fc.png) |
+| 职位总数         | $app.dataset.state.totalSize      | number   | ![img](https://qcloudimg.tencent-cloud.cn/raw/0c9979dc0de4263a0427b03ddb714ca7.png) |
+| 页码             | $page.dataset.state.pageNo        | number   | ![img](https://qcloudimg.tencent-cloud.cn/raw/3b1848d520cb6d3a21a4b54a1ee3ce2f.png) |
+| 职位列表         | $page.dataset.state.jobList       | 模型变量 | ![img](https://qcloudimg.tencent-cloud.cn/raw/996a6f92cafa8f5d88afa369487acd06.png) |
+| 公司信息         | $page.dataset.state.introduce     | 模型变量 | ![img](https://qcloudimg.tencent-cloud.cn/raw/dabf8b14df0a8a98449e101be49bdf17.png) |
+| 职位信息详情     | $page.dataset.state.jobDetail     | 模型变量 | ![img](https://qcloudimg.tencent-cloud.cn/raw/d89a66e0412e7c3a603ce5e1fd8806eb.png) |
+| 简历是否已投递   | $page.dataset.state.isSubmit      | boolean  | ![img](https://qcloudimg.tencent-cloud.cn/raw/62bafa9a5a83e5d317fbcb7849798b3c.png) |
+| 关键字           | $page.dataset.state.keyWords      | string   | ![img](https://qcloudimg.tencent-cloud.cn/raw/412caa191fa0ea596eb4f6885f0729ac.png) |
+| 查询返回结果     | $page.dataset.state.searchResults | 模型变量 | ![img](https://qcloudimg.tencent-cloud.cn/raw/7f3530aeb667821b6d27afc23e3aba64.png) |
+
+
+
+
+
+## **首页页面搭建**
+
+### **图标页面跳转至公司简介页面**
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/d4331ac33ab1cc45b45de124f1a09d6a.png)                              
+
+在对应容器中绑定页面跳转事件
+
+
+
+### **搜索框跳转至搜索页面**
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/27f3c82a010349853f11a462198e3df4.png)       
+
+​               ![img](https://qcloudimg.tencent-cloud.cn/raw/398d647e0c5126e6a463394470375d46.png)
+
+在搜索框的普通容器上绑定事件，设置页面的跳转                 ![img](https://qcloudimg.tencent-cloud.cn/raw/33605bf67cb1187ab2fa8c6485aaf41b.png)        
+
+跳转成功后，对全局变量totalSize进行赋值                 ![img](https://qcloudimg.tencent-cloud.cn/raw/81815df4e26e86162e179b80bd9f6ed8.png)        
+
+### **职位列表展示及跳转详情页**
+
+职位列表展示：页面加载时，拉取模型变量jobList，通过列表项绑定数组进行循环职位信息；
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/d8ab353a2706eeeed4c4d957a552593b.png)
+
+​        
+
+跳转对应详情页：         
+
+​        ![img](https://qcloudimg.tencent-cloud.cn/raw/d8ab353a2706eeeed4c4d957a552593b.png)             
+
+​            ![img](https://qcloudimg.tencent-cloud.cn/raw/dcb0b00a01a33bccbd6103d768428575.png)
+
+​        
+
+在列表项中绑定图中事件，当点击某一职位信息时，将对应的职位ID和数据标识赋值给全局变量jobId及dataId，赋值成功后跳转页面至职位详情页
+
+数据标识赋值dataId：
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/9c9d6f94161483b73ff229341101e01b.png)        
+
+职位ID赋值jobId：
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/a5f58ea2273dbe05f19bde8bf0ae9de2.png)        
+
+页面跳转：
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/e02d1c14272b99676ae5cd01617b780b.png)        
+
+### **上拉刷新**
+
+ 使用滚动容器包裹列表项组件整块内容
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/d969dcbe32e635bb7f00b2365b7ef49d.png)       
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/9672d35d500b6d3f80310ccf20dadaf1.png)
+
+​        
+
+并在滚动容器滚动到底部时绑定事件：首先给页码pageNo进行赋值加1；
+
+赋值成功后，以最新的pageNo和为6的pageSize数据大小作为参数      
+
+​         ![img](https://qcloudimg.tencent-cloud.cn/raw/1479375ab7232dde86f9cc640cdd1036.png)        
+
+调用招聘位置数据源的wedaGetRecords方法，获取另一页码的数据；
+
+调用数据源成功后将原有的joblist数据和新拉取的数据进行合并
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/bcb6598aa89281bccd6b165151377f7c.png)        
+
+即可更新渲染到到列表项组件。
+
+## **职位详情页面搭建**
+
+### **职位详情展示及按钮投递状态**
+
+职位详情展示：    
+
+​             ![img](https://qcloudimg.tencent-cloud.cn/raw/eefd92878682c004d38dbe68ba893ee8.png)        
+
+当页面初始加载时，模型变量jobDetail会获取全局变量dataId数据标识作为参数，拉取对应的职位详情
+
+按钮投递状态：        
+
+​        ![img](https://qcloudimg.tencent-cloud.cn/raw/9e3b8aba61e41a64d2b4d01078a35888.png)        
+
+通过jobDetail中的deliveryStatus作为判断是否按钮的禁用状态，若无禁用则点击后跳转至简历投递页面
+
+
+
+## **简体投递页面搭建**
+
+### **（1）表单容器绑定及改造**
+
+整体为一个表单容器
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/7470d0b01b063529a258c9e866562503.png)    
+
+表单容器绑定：        
+
+​         ![img](https://qcloudimg.tencent-cloud.cn/raw/9f66a13472bb671144e4ceac63bbd593.png)        
+
+表单容器关联到对应数据模型，选择 新增记录 的表单场景，填完表单信息点击开始投递，提交至数据模型中
+
+表单容器改造：             
+
+​    ![img](https://qcloudimg.tencent-cloud.cn/raw/535cfb8ef5a84fc196f69df69b520ada.png)        
+
+可更换表单容器中组件的顺序，且可添加需要的组件（文本组件）
+
+### **表单容器事件的绑定**
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/d4c88eede99d15e8d1bf48f3a2d7d158.png)        
+
+当绑定数据模型后，会自动生成DataSource成功和失败的回调事件；
+
+当提交至数据源成功后，需要调用招聘职位数据源中的wedaUpdate                
+
+ ![img](https://qcloudimg.tencent-cloud.cn/raw/965e4f4d59a20a9a27fc9cc41533c176.png)        
+
+将对应的投递状态deliveryStatus更新为true（已投递）
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/7744b48aaf03514d77bdfe5aca77ca39.png)        
+
+并且将isSubmit改为true，使提交按钮禁用，页面跳转回详情页
+
+
+
+## **搜索页页面搭建**
+
+### **搜索功能实现**
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/932513cb524495f49a99962ba493016c.png)        
+
+以表单输入组件作为输入框，
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/58d0a7160acbec4f4f734728dcac5960.png)               
+
+​          ![img](https://qcloudimg.tencent-cloud.cn/raw/0b2a85d3f6b2db278070065821527103.png)        
+
+并且在change行为时触发变量赋值，当前所输入的值event.detail.value，赋值到keyWords中；
+
+在confirm行为时绑定招聘职位数据源的wedaGetRecords方法，
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/319407eb751e2e3b3a299b3d7dd3a52b.png)                  
+
+​       ![img](https://qcloudimg.tencent-cloud.cn/raw/281759b7b3a78adfbf87ff388dc458cb.png)        
+
+以图中为参数，获取对应的职位信息列表；
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/dc7582ae871ea29de24c6e02ce81b5d9.png)        
+
+将最终的职位信息表赋值给searchResult变量。
+
+### **职位列表展示**
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/e70bd1e412d52932fb8f918e4ed5fba4.png)        
+
+职位列表展示：页面加载时，拉取模型变量searchResults，
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/43725baec2a6322af5e93c34c3023155.png)        
+
+通过列表项绑定数组进行循环职位信息
+
+## **公司简介**
+
+### **（1）公司信息展示**
+
+页面整体通过模型变量introduce进行渲染     
+
+​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/38505dcfdc37306a61ae6470d9896233.png)           
+
+​        ![img](https://qcloudimg.tencent-cloud.cn/raw/9619d0c0c462b46111409d5fe03bf15b.png)        
