--- a/product/计算与网络/容器服务/产品动态/边缘容器服务产品动态.md
+++ b/product/计算与网络/容器服务/产品动态/边缘容器服务产品动态.md
@@ -1,9 +1,21 @@
+## 2022年04月
+<table >
+<tr><th style="width:20%">动态名称</th>	<th style="width:50%">动态描述</th> 
+<th style="width:15%">发布时间</th>	<th style="width:15%">相关文档</th> </tr>
+<tr>
+  <td style="word-wrap:break-word;word-break:break-all;">集群资源配额调整说明</td><td style="word-wrap:break-word;word-break:break-all;">边缘集群会向节点数 (nodeNum）不超过5个 (0 < nodeNum ≤ 5) 、大于5个且小于20个 (5 < nodeNum < 20)的集群上的命名空间自动应用一组资源配额。您将无法移除这些配额，此资源配额将保护集群控制平面，避免因部署到集群的应用中存在潜在Bug而导致其不稳定。</td><td>2021-04-29</td><td style="word-wrap:break-word;word-break:break-all;"><a href="https://cloud.tencent.com/document/product/457/69101">集群资源配额调整说明</a></td>
+</tr>
+<tr>
+  <td style="word-wrap:break-word;word-break:break-all;">云边互访</td><td style="word-wrap:break-word;word-break:break-all;">边缘集群支持在不同边缘地域Pod访问不同地域的服务,例如在南京地域的Pod可以成功访问北京地域的服务,在北京地域的Pod也可以成功访问南京地域的服务。</td><td>2021-04-29</td><td style="word-wrap:break-word;word-break:break-all;"><a href="https://cloud.tencent.com/document/product/457/69101">云边互访</a></td>
+</tr>
+</table>
+
 ## 2022年03月
 <table >
 <tr><th style="width:20%">动态名称</th>	<th style="width:50%">动态描述</th> 
 <th style="width:15%">发布时间</th>	<th style="width:15%">相关文档</th> </tr>
 <tr>
-  <td style="word-wrap:break-word;word-break:break-all;">边缘集群支持边缘节点池管理和节点池的分组管理</td><td style="word-wrap:break-word;word-break:break-all;">边缘集群支持对边缘节点进行节点池管理和节点池的分组管理。本次更新重构了旧版本的 NodeGroup 和 NodeUnit 的界面交互，2022年3月29日之后的新建集群将使用新的交互逻辑，使用旧版本的集群不受影响。</td><td>2021-03-29</td><td style="word-wrap:break-word;word-break:break-all;"><a href="https://cloud.tencent.com/document/product/457/69101">边缘节点池管理和节点池的分组管理</a></td>
+ <td style="word-wrap:break-word;word-break:break-all;">边缘集群支持边缘节点池管理和节点池的分组管理</td><td style="word-wrap:break-word;word-break:break-all;">边缘集群支持对边缘节点进行节点池管理和节点池的分组管理。本次更新重构了旧版本的 NodeGroup 和 NodeUnit 的界面交互，2022年3月29日之后的新建集群将使用新的交互逻辑，使用旧版本的集群不受影响。</td><td>2021-03-29</td><td style="word-wrap:break-word;word-break:break-all;"><a href="https://cloud.tencent.com/document/product/457/69101">边缘节点池管理和节点池的分组管理</a></td>
 </tr>
 </table>
 
