--- a/product/存储与CDN/对象存储 4.0/购买指南/计费项/请求费用.md
+++ b/product/存储与CDN/对象存储 4.0/购买指南/计费项/请求费用.md
@@ -72,9 +72,9 @@
 
 <table>
    <tr>
-      <th>地域</td>
-      <th>存储类型</td>
-      <th>请求费用（元/万次）</td>
+      <th style="width: 47%;">地域</td>
+      <th style="width: 26%;">存储类型</td>
+      <th style="width: 27%;">请求费用（元/万次）</td>
    </tr>
    <tr>
       <td rowspan=2>北京、上海、广州</td>
@@ -114,17 +114,17 @@
    <tr>
       <td>北京、上海、广州</td>
       <td>智能分层存储（多 AZ）</td>
-      <td><li>读写请求：0.01<li>智能分层对象监控（元/万个）：0.175</td>
+      <td><ul  style="margin: 0;"><li>读写请求：0.01</li><li>智能分层对象监控（元/万个）：0.175</li></ul></td>
    </tr>
    <tr>
       <td>北京、上海、广州、重庆、东京、新加坡</td>
       <td>智能分层存储</td>
-      <td><li>读写请求：0.01<li>智能分层对象监控（元/万个）：0.175</td>
+      <td><ul  style="margin: 0;"><li>读写请求：0.01</li><li>智能分层对象监控（元/万个）：0.175</li></ul></td>
    </tr>
    <tr>
       <td>北京、南京、上海、广州、成都、东京</td>
       <td>深度归档存储</td>
-      <td><li>读写请求：0.5<li>标准取回请求：7<li>批量取回请求：2</td>
+      <td><ul  style="margin: 0;"><li>读写请求：0.5</li><li>标准取回请求：7</li><li>批量取回请求：2</li></ul></td>
    </tr>
    <tr>
       <td rowspan=2>北京金融、上海金融、深圳金融</td>
