--- a/product/监控与管理/云监控/什么是腾讯云云监控？/基本功能.md
+++ b/product/监控与管理/云监控/什么是腾讯云云监控？/基本功能.md
@@ -21,7 +21,7 @@
 云监控为用户提供了及时、个性化的告警服务。
 
 - 基于已有监控指标数据，用户可通过默认绑定与个性化配置的方式对云资源以及自定义指标进行告警设置。
-- 用户可通过事件告警、故障告警、阈值告警等方式制定针对不同场景的资源告警策略，全面覆盖用户的运维场景。
+- 用户可通过故障告警、阈值告警等方式制定针对不同场景的资源告警策略，全面覆盖用户的运维场景。
 - 用户可通过设定告警的重复频次，告警的判定逻辑区分不同等级的告警；用户可通过手机号、邮箱、回调 url 的配置，经由不同渠道及时地接收告警消息。
 
 ### 多维度图表展示
