--- a/product/安全服务/云防火墙/操作指南/访问控制/互联网边界规则.md
+++ b/product/安全服务/云防火墙/操作指南/访问控制/互联网边界规则.md
@@ -10,7 +10,7 @@
 [](id:add)
 4. 添加规则，在入站规则页面，可进行规则的配置。
 	1. 在入站规则页面，单击**添加规则**，将弹出“添加入站规则”的弹窗。
-	2. 在“添加入站规则”的弹窗中，可进行规则的配置。访问目的类型可选 IP 地址、地理位置、云厂商和 [地址模版](https://cloud.tencent.com/document/product/1132/49443#IP)，并根据规则重要性勾选执行顺序，最后填写访问源 IP，填写访问目的、目的端口、选择协议及策略等信息。
+	2. 在“添加入站规则”的弹窗中，可进行规则的配置。访问目的类型可选 IP 地址、地理位置、云厂商和 [地址模板](https://cloud.tencent.com/document/product/1132/49443#IP)，并根据规则重要性勾选执行顺序，最后填写访问源 IP，填写访问目的、目的端口、选择协议及策略等信息。
 >!
 >- 入站规则：访问源填写0.0.0.0/0时，后台会自动关联全部公网 IP，填写 CIDR 地址同理，仅对该网段内的公网 IP 生效。
 >- 出站规则：与入站规则相同。
